[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "langgraph>=0.1.19",
    "langchain-openai>=0.1.14",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sse-starlette>=2.1.2",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pyright>=1.1.370",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["app"]
